src/main/java/org/alex/example/fitnessmanagement/error/NotFoundByPhoneNumberException.java
package org.alex.example.fitnessmanagement.error;

public class NotFoundByPhoneNumberException extends BusinessFitnessException {
    public NotFoundByPhoneNumberException(String message) {
        super(message);
    }
}
